--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.8.1",
+    "apexcharts": "^3.33.0",
     "axios": "^0.24.0",
     "cuid": "^2.1.8",
     "framer-motion": "^5.6.0",
-    "next": "12.0.8",
+    "next": "^12.0.8",
     "next-auth": "^4.1.0",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "zustand": "^3.6.9"
   },
